padding on smaller screens fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -1121,7 +1121,8 @@ footer a, footer span {
 	}
 
 	nav ul li a {
-		padding: 10px;
+		padding: 7px;
+		font-size: 16px;
 	}
 }
 
